--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <title>Boolean train</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
+<header class="headbar">
+    <h1 class="title">
+        Boolean Train
+    </h1>
+</header>
 <body>
+    <div class="price">
+        <div id="costoticket">
+          Buongiorno, il costo del suo biglietto per viaggiare con il nostro treno è:
+        </div>
+
+    </div>
     
     <script type="text/javascript" src="./js/myscript.js"></script>
 </body>
